# projeto-fiap-fase-4

./: README.md  app.py  app_train.py  pyproject.toml  streamlit_app.py
input/: data_gen.py  dataset_petrobras.csv
model/: model_class.py  modelo_lstm_final.pth  scaler_final.pkl
notebooks/: exploracao.ipynb
utils/: utils.py
